fix table scroll-x on small screens

--- a/src/Resources/public/css/app.css
+++ b/src/Resources/public/css/app.css
@@ -171,9 +171,13 @@ main .content ul:not(.breadcrumb) > * + * {
  */
 table {
   width: 100%;
-  margin-bottom: 1rem;
   border-bottom: 1px solid #dee2e6;
+  display: block;
+  max-width: -moz-fit-content;
+  max-width: fit-content;
+  margin: 1rem auto;
   overflow-x: auto;
+  white-space: nowrap;
 }
 
 table td,
